--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "jquery.easing": "^1.4.1"
     }
 }
